syntax = "proto3";

option go_package = "github.com/chpter/shared/grpc/order;ordergrpc";

package orderservice;

import "google/protobuf/timestamp.proto";

message OrderItem {
	int64 id = 1;
	string name = 2;
	int32 quantity = 3;	
	double price = 4;
	double total = 5;
}

message Order {
	int64 id = 1;
	double total_amount = 2;
	int64 user_id = 3;
	string currency = 4;
	string status = 5;
	repeated OrderItem items = 6;
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp updated_at = 8;	
}

message CreatedOrder {
	int64 order_id = 1;
	int64 user_id = 2;
	string status = 3;
}

message GetOrderByIDRequest {
	int64 order_id = 1;
}

message GetOrderByIDResponse {
	string status = 1;
	string message = 2;
	OrderItem data = 3;
}

message GetOrderByUserIDRequest {
	int64 user_id = 1;
}

message GetOrdersByUserIDResponse {
	string status = 1;
	string message = 2;
	repeated Order data = 3;
}

message CreateOrderRequest {
	int64 user_id = 1;
	double total_amount = 2;
	string currency = 3;
	repeated OrderItem items = 4;
}

message CreateOrderResponse {
	string status = 1;
	string message = 2;
	CreatedOrder data = 3;
}

service OrderService {
	rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse);
	rpc GetOrderByUserID(GetOrderByUserIDRequest) returns (GetOrdersByUserIDResponse);
	rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}