syntax = "proto3";

option go_package = "github.com/chpter/shared/grpc/user;usergrpc";

package userservice;

import "google/protobuf/timestamp.proto";

message User {
	int64 id = 1;
	string first_name = 2;
	string last_name = 3;
	string email = 4;
	string username = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
}

message GetUserByIDRequest {
	int64 id = 1;
}

message GetUserByIDResponse {
	string status = 1;
	string message = 2;
	User data = 3;
}

service UserService {
	rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
}